Fix path and cname file

--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://chrisabird.github.io/tori/"
+baseURL = "https://christopherbird.co.uk"
 languageCode = "en-us"
 title = "トリ"
 theme = "hyde"
